# cheml

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  docker-compose.yml  environment.dev.yml  environment.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tasks.py
.github/workflows/: lint.yaml  test.yaml
optimization/manufacturing_quality/: manu_mlflow.py  optim_manu.ipynb
scripts/: create_dev_env.sh
src/cheml/: app_logging.py  configs.py  main.py
src/cheml/routes/: manufacturing_quality.py
